Rendering is prevented if all view layers in current scene are disabled, even if other scenes are used in compositor #75071

Closed
opened 2020-03-25 00:41:15 +01:00 by Sam Brubaker · 6 comments

Version: 2.82a (Linux 64-bit)

View_Layer_bug.blend

How to reproduce:

  • Open the attached file and render a frame
  • In the outlier, disable rendering either "Layer A" OR "Layer B" and render a frame again. No problems so far.

Now disable rendering for both view layers and try to render.

The expected outcome is that the background scene will still be rendered and compositing will be performed, outputting an image containing neither of the view layers. Instead, the whole process is aborted and the user receives an error message. One workaround is to enable the view layer "View Layer", causing it to be rendered even though it is unused in the compositor, but this should not be necessary.

It makes sense to warn the user if all the view layers are disabled, but it doesn't make sense to abort the render when there could be many cases in which this is intentional.

Version: 2.82a (Linux 64-bit) [View_Layer_bug.blend](https://archive.blender.org/developer/F8427629/View_Layer_bug.blend) How to reproduce: - Open the attached file and render a frame - In the outlier, disable rendering either "Layer A" OR "Layer B" and render a frame again. No problems so far. # Now disable rendering for both view layers and try to render. The expected outcome is that the background scene will still be rendered and compositing will be performed, outputting an image containing neither of the view layers. Instead, the whole process is aborted and the user receives an error message. One workaround is to enable the view layer "View Layer", causing it to be rendered even though it is unused in the compositor, but this should not be necessary. It makes sense to *warn* the user if all the view layers are disabled, but it doesn't make sense to abort the render when there could be many cases in which this is intentional.
Author

Added subscriber: @rocketman

Added subscriber: @rocketman

Added subscriber: @mano-wii

Added subscriber: @mano-wii

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'

I can confirm.
It is interesting that the background View Layer is rendered even if you disable it.
It seems that there is a bad logic that, if you disable all View Layers of the scene used, the render is canceled.
And wokaround really reveals this bug.

I can confirm. It is interesting that the background View Layer is rendered even if you disable it. It seems that there is a bad logic that, if you disable all View Layers of the scene used, the render is canceled. And wokaround really reveals this bug.

This issue was referenced by 2c61b7f354

This issue was referenced by 2c61b7f3541064e57a11a8347efd08ce85a5907e

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Brecht Van Lommel self-assigned this 2020-05-14 02:48:03 +02:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#75071
No description provided.