Fix T75071: rendering fails when all render layers disabled, but using compositor